--- a/src/partials/hero3.html
+++ b/src/partials/hero3.html
@@ -1,47 +1,73 @@
 <!-- -----------Hotel Pahe Hero----------- -->
 <section class="hotel-page-hero">
-    <div class="container">
-        <div class="center">
-
-            <h1 class="hero-title">MIMIH<span class="accent">O</span></h1>
-            <h2 class="hero-sub-title">Готель</h2>
-            <div class="local-div">
-                <a href="https://goo.gl/maps/mcsi6WdrQmKkDymHA" class="location link" target="_blank"
-          rel="noopener noreferrer nofollow">
-                    <svg class="location-icon" width="20" height="20">
-                        <use href="./img/icons.svg#location"></use>
-                    </svg>Україна, м.Полтава, <br> вул. Маршала Бірюзова, 15
-                </a>
-                <div>
-                    <button type="button" class="table-button btn js-open-modal" data-modal="modalroom">Забронювати номер</button>
-                    <button type="button" class="number-button btn js-open-modal" data-modal="modalprice">Переглянути ціни</button>
-                </div>
-            </div>
-
+  <div class="container">
+    <div class="center">
+      <h1 class="hero-title">MIMIH<span class="accent">O</span></h1>
+      <h2 class="hero-sub-title">Готель</h2>
+      <div class="local-div">
+        <addres class="hero-address">
+            <a
+              href="https://goo.gl/maps/mcsi6WdrQmKkDymHA"
+              class="location link"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+            >
+              <svg class="location-icon" width="20" height="20">
+                <use href="./img/icons.svg#location"></use>
+              </svg>
+              Україна, м. Полтава,<br/>
+              вул. Маршала Бірюзова, 15</a>
+        </addres>
+        <div>
+          <button
+            type="button"
+            class="table-button btn js-open-modal"
+            data-modal="modalroom"
+          >
+            Забронювати номер
+          </button>
+          <button
+            type="button"
+            class="number-button btn js-open-modal"
+            data-modal="modalprice"
+          >
+            Переглянути ціни
+          </button>
         </div>
-        <ul class="soc-list">
-            <li class="soc-item">
-                <a href="https://www.instagram.com/mimino.poltava/" class="soc-link" target="_blank" rel=”noreferrer”>
-                    <svg class="soc-icon" width="24" height="24">
-                        <use href="./img/icons.svg#instagram"></use>
-                    </svg>
-                </a>
-            </li>
-            <li class="soc-item">
-                <a href="https://www.facebook.com/profile.php?id=114589595894911&paipv=0&eav=AfYgKg68kXEFofZ68qpkVFqZyVZVXsLS_P-VWnl2YwaHSe_T4W2QUmOtsdei3EzsNEU&_rdr"
-                    class="soc-link" target="_blank" rel=”noreferrer”>
-                    <svg class="soc-icon" width="24" height="24">
-                        <use href="./img/icons.svg#facebook"></use>
-                    </svg>
-                </a>
-            </li>
-            <li class="soc-item">
-                <a href="" class="soc-link" target="_blank" rel=”noreferrer”>
-                    <svg class="soc-icon" width="24" height="24">
-                        <use href="./img/icons.svg#telegram"></use>
-                    </svg>
-                </a>
-            </li>
-        </ul>
+      </div>
     </div>
+    <ul class="soc-list">
+      <li class="soc-item">
+        <a
+          href="https://www.instagram.com/mimino.poltava/"
+          class="soc-link"
+          target="_blank"
+          rel="”noreferrer”"
+        >
+          <svg class="soc-icon" width="24" height="24">
+            <use href="./img/icons.svg#instagram"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="soc-item">
+        <a
+          href="https://www.facebook.com/profile.php?id=114589595894911&paipv=0&eav=AfYgKg68kXEFofZ68qpkVFqZyVZVXsLS_P-VWnl2YwaHSe_T4W2QUmOtsdei3EzsNEU&_rdr"
+          class="soc-link"
+          target="_blank"
+          rel="”noreferrer”"
+        >
+          <svg class="soc-icon" width="24" height="24">
+            <use href="./img/icons.svg#facebook"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="soc-item">
+        <a href="" class="soc-link" target="_blank" rel="”noreferrer”">
+          <svg class="soc-icon" width="24" height="24">
+            <use href="./img/icons.svg#telegram"></use>
+          </svg>
+        </a>
+      </li>
+    </ul>
+  </div>
 </section>
