--- a/src/partials/aboutkitchen.html
+++ b/src/partials/aboutkitchen.html
@@ -37,6 +37,7 @@
         media="(min-width: 320px)"
       />
       <img
+        class="border-one"
         src="./img/restaurant-interior-mobile.jpg"
         alt="restaurant-interior"
       />
@@ -80,6 +81,7 @@
       />
 
       <img
+      class="border-two"
         src="./img/oruri-jacome-mobile.jpg"
         alt="oruri-jacome"
         srcset="
@@ -125,6 +127,7 @@
           />
 
           <img
+          class="border-four"
             src="./img/helena-lopes-mobile.jpg"
             alt="helena-lopes"
             srcset="
@@ -160,6 +163,7 @@
           />
 
           <img
+          class="border-four"
             src="./img/mat-brown-mobile.jpg"
             alt="mat-brown"
             srcset="
