--- a/src/partials/abouthotel.html
+++ b/src/partials/abouthotel.html
@@ -49,48 +49,67 @@
                 <img class="border-hotel-two" src="./img/abouthotel/hotel-mob.jpg" alt="hotel">
             </picture>
         </div>
-        <div class="about-hotel-img">
-            
-            <picture>
-                <source srcset="
-                                                ./img/abouthotel/white-towel-bed-desc.jpg    1x,
-                                                ./img/abouthotel/white-towel-bed-desc-2x.jpg 2x
-                                              " media="(min-width: 1280px)" />
-                <source srcset="
-                                            ./img/abouthotel/white-towel-bed-tab.jpg    1x,
-                                            ./img/abouthotel/white-towel-bed-tab-2x.jpg 2x
-                                          " media="(min-width: 1024px)" />
-                <source srcset="
-                                                ./img/abouthotel/white-towel-bed-mob.jpg    1x,
-                                                ./img/abouthotel/white-towel-bed-mob-2x.jpg 2x
-                                              " media="(min-width: 320px)" />
-
-                <img class="border-hotel-three" src="./img/abouthotel/white-towel-bed-mob.jpg" alt="white-towel-bed">
-            </picture>
-            <picture>
-                <source srcset="
-                                                ./img/abouthotel/hotel-registration-desc.jpg    1x,
-                                                ./img/abouthotel/hotel-registration-desc-2x.jpg 2x
-                                              " media="(min-width: 1280px)" />
-                <source srcset="
-                                            ./img/abouthotel/hotel-registration-tab.jpg    1x,
-                                            ./img/abouthotel/hotel-registration-tab-2x.jpg 2x
-                                          " media="(min-width: 1024px)" />
-                <source srcset="
-                                                ./img/abouthotel/hotel-registration-mob.jpg    1x,
-                                                ./img/abouthotel/hotel-registration-mob-2x.jpg 2x
-                                              " media="(min-width: 320px)" />
-            
-                <img class="border-hotel-four" src="./img/abouthotel/hotel-registration-mob.jpg" alt="hotel-registration">
-            </picture>
-        </div>
-        <div class="about-hotel-arrow">
-            <svg class="about-icon-hotel" width="32" height="32">
-                <use href="./img/icons.svg#arrow-left"></use>
-            </svg>
-            <svg class="about-icon-hotel" width="32" height="32">
-                <use href="./img/icons.svg#arrow-right"></use>
-            </svg>
+        <div class="about-hotel-img" >
+            <button type="button" class="arrowperv_abouthotel">
+                <svg class="about-icon-hotel" width="32" height="32">
+                    <use href="./img/icons.svg#arrow-left"></use>
+                </svg>
+            </button>
+            <div class="slider_2" dir="rtl">
+                <picture>
+                    <source srcset="
+                                                    ./img/aboutrest/about_rest_4_desc_1x.jpg    1x,
+                                                    ./img/aboutrest/about_rest_4_desc_2x.jpg 2x
+                                                  " media="(min-width: 1280px)" />
+                    <source srcset="
+                                                ./img/aboutrest/about_rest_4_tab_1x.jpg    1x,
+                                                ./img/aboutrest/about_rest_4_tab_2x.jpg 2x
+                                              " media="(min-width: 1024px)" />
+                    <source srcset="
+                                                    ./img/aboutrest/about_rest_4_mob_1x.jpg    1x,
+                                                    ./img/aboutrest/about_rest_4_mob_2x.jpg 2x
+                                                  " media="(min-width: 320px)" />
+    
+                    <img class="border-hotel-three" src="./img/aboutrest/about_rest_4_mob_1x.jpg" alt="white-towel-bed">
+                </picture>
+                <picture>
+                    <source srcset="
+                                                    ./img/aboutrest/about_rest_3_desc_1x.jpg    1x,
+                                                    ./img/aboutrest/about_rest_3_desc_2x.jpg 2x
+                                                  " media="(min-width: 1280px)" />
+                    <source srcset="
+                                                ./img/aboutrest/about_rest_3_tab_1x.jpg    1x,
+                                                ./img/aboutrest/about_rest_3_tab_2x.jpg 2x
+                                              " media="(min-width: 1024px)" />
+                    <source srcset="
+                                                    ./img/aboutrest/about_rest_3_mob_1x.jpg    1x,
+                                                    ./img/aboutrest/about_rest_3_mob_2x.jpg 2x
+                                                  " media="(min-width: 320px)" />
+                
+                    <img class="border-hotel-four" src="./img/aboutrest/about_rest_3_mob_1x.jpg" alt="hotel-registration">
+                </picture>
+                <picture>
+                    <source srcset="
+                                                                ./img/abouthotel/hotel-registration-desc.jpg    1x,
+                                                                ./img/abouthotel/hotel-registration-desc-2x.jpg 2x
+                                                              " media="(min-width: 1280px)" />
+                    <source srcset="
+                                                            ./img/abouthotel/hotel-registration-tab.jpg    1x,
+                                                            ./img/abouthotel/hotel-registration-tab-2x.jpg 2x
+                                                          " media="(min-width: 1024px)" />
+                    <source srcset="
+                                                                ./img/abouthotel/hotel-registration-mob.jpg    1x,
+                                                                ./img/abouthotel/hotel-registration-mob-2x.jpg 2x
+                                                              " media="(min-width: 320px)" />
+                
+                    <img class="border-hotel-four" src="./img/abouthotel/hotel-registration-mob.jpg" alt="hotel-registration">
+                </picture>
+            </div >
+            <button type="button" class="arrownext_abouthotel">
+                <svg class="about-icon-hotel" width="32" height="32">
+                    <use href="./img/icons.svg#arrow-right"></use>
+                </svg>
+            </button>
         </div>
     </div>
 </section>
