--- a/src/css/abouthotel.css
+++ b/src/css/abouthotel.css
@@ -7,6 +7,28 @@
     padding-bottom: 20px;
     position: relative;
 }
+/* ================================ */
+.slider_2 {
+  padding-right: 20px;
+  min-width: 0;
+  overflow: hidden;
+  height: 100%;
+  text-align: center;
+  padding-top: 30px;
+}
+.arrowperv_abouthotel,.arrownext_abouthotel{
+  background-color: transparent;
+  border: none;
+  position: absolute;
+}
+.arrowperv_abouthotel{
+  bottom: 0;
+}
+.arrownext_abouthotel{
+  bottom: 0;
+  left: 64px;
+}
+/* ============================= */
 .border-hotel-one,
 .border-hotel-two,
 .border-hotel-three,
@@ -55,7 +77,7 @@
 .about-hotel-pexels {
     display: flex;
     gap: 20px;
-    margin-bottom: 32px;   
+    margin-bottom: 350px;   
 }
 .about-hotel-text {
     width: 163px;
@@ -71,7 +93,10 @@
   position: absolute;
     display: flex;
     gap: 25px;
+      width: 280px;
+  height: 315px;
     left: 0;
+    bottom: 30px;
 }
 .about-hotel-arrow {
     display: flex ;
@@ -97,11 +122,22 @@ fill: var(--second-gold-color);
   .img-hotel {
     margin-left: 0;
   }
+  .about-hotel-img{
+    width: 370px;
+    padding-right: 20px;
+  }
 }
 
 /* ------- Tab --------- */
 @media screen and (min-width: 1024px) {
-  
+  .arrowperv_abouthotel{
+  bottom: 10px;
+  left: 0;
+}
+.arrownext_abouthotel{
+  bottom: 10px;
+  left: 64px;
+}
    .about-hotel > .container {
     width: 1024px;
      padding-top: 120px;
@@ -140,6 +176,7 @@ fill: var(--second-gold-color);
   .about-hotel-pexels {
     gap: 48px;
     padding-left: 220px;
+    margin-bottom: 260px; 
   }
   .img-hotel {
     position: absolute;
@@ -159,6 +196,7 @@ fill: var(--second-gold-color);
     position: absolute;
     padding: 0;
     margin: 0;
+    width: 468px;
     gap: 40px;
     top: 948px;
     left: 47px;
@@ -171,6 +209,14 @@ fill: var(--second-gold-color);
 /* ----- Desc ------*/
 @media screen and (min-width: 1280px) {
   
+    .arrowperv_abouthotel{
+  bottom: -60px;
+  left: 0;
+}
+.arrownext_abouthotel{
+  bottom: -60px;
+  left: 64px;
+}
   .about-hotel > .container {
     width: 1280px;
     padding-bottom: 50px;
@@ -202,6 +248,7 @@ fill: var(--second-gold-color);
   .about-hotel-pexels {
      padding-left: 294px;
      gap: 45px;
+     margin-bottom: 200px; 
   }
   .img-hotel {
     top: -24px;
@@ -210,6 +257,7 @@ fill: var(--second-gold-color);
 .about-hotel-img  {
   top: 899px;
   left: 85px;
+  width: 590px;
 }
 .about-hotel-arrow {
    margin-top: 115px;
