--- a/src/css/hero3.css
+++ b/src/css/hero3.css
@@ -107,7 +107,6 @@
 .soc-list {
   display: flex;
   gap: 20px;
-  margin-top: 58px;
 }
 .soc-icon {
   fill: var(--second-gold-color);
@@ -211,8 +210,6 @@ line-height: calc(138/128);
     background-position: center;
     margin: 0 auto;
     background-size: cover;
-    padding-top: 164px;
-    padding-bottom: 65px;
   }
   @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
@@ -224,6 +221,9 @@ line-height: calc(138/128);
         ),
         url(../img/hotel-hero-desk2x.jpg);
     }
+  }
+  .hotel-page-hero> .container{
+    padding-bottom: 64px;
   }
   .soc-list {
     display: none;
