--- a/src/partials/hero3.html
+++ b/src/partials/hero3.html
@@ -18,7 +18,7 @@
               Україна, м. Полтава,<br/>
               вул. Маршала Бірюзова, 15</a>
         </addres>
-        <div>
+        <div class="hero3-button">
           <button
             type="button"
             class="table-button btn js-open-modal"
