--- a/src/css/abouthotel.css
+++ b/src/css/abouthotel.css
@@ -77,7 +77,8 @@
 .about-hotel-pexels {
     display: flex;
     gap: 20px;
-    margin-bottom: 350px;   
+    margin-bottom: 350px;
+    align-items: center;   
 }
 .about-hotel-text {
     width: 163px;
@@ -86,7 +87,6 @@
     line-height: 1.25;
     letter-spacing: 0.02em;
     color: var(--first-gold-color);
-    margin-top: 70px;
 }
 
 .about-hotel-img {
@@ -187,7 +187,6 @@ fill: var(--second-gold-color);
   }
   .about-hotel-text {
    width: 312px;
-    margin-top: 190px;
     font-size: 16px;
     line-height: 1.25;
   }
@@ -241,9 +240,6 @@ fill: var(--second-gold-color);
   }
   .about-hotel-after-title {
     margin-bottom: 162px;
-  }
-   .about-hotel-text {
-    margin-bottom: 104px;
   }
   .about-hotel-pexels {
      padding-left: 294px;
