--- a/src/css/aboutrest.css
+++ b/src/css/aboutrest.css
@@ -101,6 +101,7 @@ right: 64px;
   display: flex;
   gap: 20px;
   margin-bottom: 350px;
+  align-items: center;
 }
 .about-text {
   width: 163px;
@@ -212,7 +213,6 @@ right: 64px;
 
   .about-text {
     width: 312px;
-    margin-top: 190px;
     font-size: 16px;
     line-height: 1.25;
   }
@@ -249,9 +249,6 @@ right: 64px;
   .about-after-title {
     width: 518px;
     margin-bottom: 162px;
-  }
-  .about-text {
-    margin-bottom: 119px;
   }
   .about-pexels {
     gap: 32px;
