--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -2,10 +2,11 @@
 .first-hero {
   padding-top: 181px;
   padding-bottom: 20px;
-  position: relative;
   overflow: hidden;
 }
-
+.first-hero> .container {
+  position: relative;
+}
 .first-hero-title {
   font-family: 'Film P3';
   font-style: normal;
@@ -318,7 +319,7 @@
   .mimiho-address {
     position: absolute;
     right: 15px;
-    top: 64px;
+    top: -115px;
   }
 }
 
