--- a/src/partials/aboutkitchen.html
+++ b/src/partials/aboutkitchen.html
@@ -1,191 +1,193 @@
 <!-- -------About our kitchen------- -->
-<section class="kitchen-section container">
-  <!-- прихований заголовок для краулерів -->
-  <h2 class="visually-hidden">About our kitchen</h2>
-  <p class="kitchen-about">Amet minim mollit non</p>
-
-  <!-- <p class="restoran-name"></p> -->
-  <h3 class="restoran-name">MIMIHO</h3>
-
-  <p class="interior-descript">
-    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
-    Velit officia consequat duis enim velit mollit. Exercitation veniam
-    consequat sunt nostrud amet.
-  </p>
-
-  <div class="img-interrior">
-    <picture>
-      <source
-        srcset="
-          ./img/restaurant-interior-desktop.jpg    1x,
-          ./img/restaurant-interior-desktop-2x.jpg 2x
-        "
-        media="(min-width: 1280px)"
-      />
-      <source
-        srcset="
-          ./img/restaurant-interior-tablet.jpg    1x,
-          ./img/restaurant-interior-tablet-2x.jpg 2x
-        "
-        media="(min-width: 1024px)"
-      />
-      <source
-        srcset="
-          ./img/restaurant-interior-mobile.jpg    1x,
-          ./img/restaurant-interior-mobile-2x.jpg 2x
-        "
-        media="(min-width: 320px)"
-      />
-      <img
-        class="border-one"
-        src="./img/restaurant-interior-mobile.jpg"
-        alt="restaurant-interior"
-      />
-      <!-- width="460"
-          height="574" -->
-    </picture>
-    <!-- <img
-        src="./img/restaurant-interior-mobile.jpg"
-        alt="restaurant-interior"
-        srcset="
-          ./img/restaurant-interior-mobile.jpg    1x,
-          ./img/restaurant-interior-mobile.jpg-2x 2x
-        "
-        width="244"
-        height="322"
-      /> -->
-  </div>
-
-  <div class="oruri">
-    <picture>
-      <source
-        srcset="
-          ./img/oruri-jacome-desktop.jpg    1x,
-          ./img/oruri-jacome-desktop-2x.jpg 2x
-        "
-        media="(min-width: 1280px)"
-      />
-      <source
-        srcset="
-          ./img/oruri-jacome-tablet.jpg    1x,
-          ./img/oruri-jacome-tablet-2x.jpg 2x
-        "
-        media="(min-width: 1024px)"
-      />
-      <source
-        srcset="
-          ./img/oruri-jacome-mobile.jpg    1x,
-          ./img/oruri-jacome-mobile-2x.jpg 2x
-        "
-        media="(min-width: 320px)"
-      />
-
-      <img
-      class="border-two"
-        src="./img/oruri-jacome-mobile.jpg"
-        alt="oruri-jacome"
-        srcset="
-          ./img/oruri-jacome-mobile.jpg    1x,
-          ./img/oruri-jacome-mobile.jpg-2x 2x
-        "
-      />
-      <!-- width="200"
-          height="278" -->
-      <!-- width="460"
-          height="574" -->
-    </picture>
-    <p class="oruri-descript">
+<section class="kitchen-section">
+  <div class="container">
+    <!-- прихований заголовок для краулерів -->
+    <h2 class="visually-hidden">About our kitchen</h2>
+    <p class="kitchen-about">Amet minim mollit non</p>
+  
+    <!-- <p class="restoran-name"></p> -->
+    <h3 class="restoran-name">MIMIHO</h3>
+  
+    <p class="interior-descript">
       Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
       Velit officia consequat duis enim velit mollit. Exercitation veniam
       consequat sunt nostrud amet.
     </p>
-  </div>
-  <div class="pexels-slider">
-    <ul class="slider-pic">
-      <li class="slider-item">
-        <picture>
-          <source
-            srcset="
-              ./img/helena-lopes-desktop.jpg    1x,
-              ./img/helena-lopes-desktop-2x.jpg 2x
-            "
-            media="(min-width: 1280px)"
-          />
-          <source
-            srcset="
-              ./img/helena-lopes-tablet.jpg    1x,
-              ./img/helena-lopes-tablet-2x.jpg 2x
-            "
-            media="(min-width: 1024px)"
-          />
-          <source
-            srcset="
-              ./img/helena-lopes-mobile.jpg    1x,
-              ./img/helena-lopes-mobile-2x.jpg 2x
-            "
-            media="(min-width: 320px)"
-          />
-
-          <img
-          class="border-four"
-            src="./img/helena-lopes-mobile.jpg"
-            alt="helena-lopes"
-            srcset="
-              ./img/helena-lopes-mobile.jpg    1x,
-              ./img/helena-lopes-mobile.jpg-2x 2x
-            "
-          />
-        </picture>
-      </li>
-
-      <li class="slider-item">
-        <picture>
-          <source
-            srcset="
-              ./img/mat-brown-desktop.jpg    1x,
-              ./img/mat-brown-desktop-2x.jpg 2x
-            "
-            media="(min-width: 1280px)"
-          />
-          <source
-            srcset="
-              ./img/mat-brown-tablet.jpg    1x,
-              ./img/mat-brown-tablet-2x.jpg 2x
-            "
-            media="(min-width: 1024px)"
-          />
-          <source
-            srcset="
-              ./img/mat-brown-mobile.jpg    1x,
-              ./img/mat-brown-mobile-2x.jpg 2x
-            "
-            media="(min-width: 320px)"
-          />
-
-          <img
-          class="border-four"
-            src="./img/mat-brown-mobile.jpg"
-            alt="mat-brown"
-            srcset="
-              ./img/mat-brown-mobile.jpg    1x,
-              ./img/mat-brown-mobile.jpg-2x 2x
-            "
-          />
-        </picture>
-      </li>
-    </ul>
-
-    <div class="slider-arrows">
-      <button type="button" class="slider-arrow-btn">
-        <svg class="icon-arrow" width="32" height="32">
-          <use href="./img/icons.svg#arrow-left"></use>
-        </svg>
-      </button>
-      <button type="button" class="slider-arrow-btn">
-        <svg class="icon-arrow" width="32" height="32">
-          <use href="./img/icons.svg#arrow-right"></use>
-        </svg>
-      </button>
+  
+    <div class="img-interrior">
+      <picture>
+        <source
+          srcset="
+            ./img/restaurant-interior-desktop.jpg    1x,
+            ./img/restaurant-interior-desktop-2x.jpg 2x
+          "
+          media="(min-width: 1280px)"
+        />
+        <source
+          srcset="
+            ./img/restaurant-interior-tablet.jpg    1x,
+            ./img/restaurant-interior-tablet-2x.jpg 2x
+          "
+          media="(min-width: 1024px)"
+        />
+        <source
+          srcset="
+            ./img/restaurant-interior-mobile.jpg    1x,
+            ./img/restaurant-interior-mobile-2x.jpg 2x
+          "
+          media="(min-width: 320px)"
+        />
+        <img
+          class="border-one"
+          src="./img/restaurant-interior-mobile.jpg"
+          alt="restaurant-interior"
+        />
+        <!-- width="460"
+            height="574" -->
+      </picture>
+      <!-- <img
+          src="./img/restaurant-interior-mobile.jpg"
+          alt="restaurant-interior"
+          srcset="
+            ./img/restaurant-interior-mobile.jpg    1x,
+            ./img/restaurant-interior-mobile.jpg-2x 2x
+          "
+          width="244"
+          height="322"
+        /> -->
+    </div>
+  
+    <div class="oruri">
+      <picture>
+        <source
+          srcset="
+            ./img/oruri-jacome-desktop.jpg    1x,
+            ./img/oruri-jacome-desktop-2x.jpg 2x
+          "
+          media="(min-width: 1280px)"
+        />
+        <source
+          srcset="
+            ./img/oruri-jacome-tablet.jpg    1x,
+            ./img/oruri-jacome-tablet-2x.jpg 2x
+          "
+          media="(min-width: 1024px)"
+        />
+        <source
+          srcset="
+            ./img/oruri-jacome-mobile.jpg    1x,
+            ./img/oruri-jacome-mobile-2x.jpg 2x
+          "
+          media="(min-width: 320px)"
+        />
+  
+        <img
+        class="border-two"
+          src="./img/oruri-jacome-mobile.jpg"
+          alt="oruri-jacome"
+          srcset="
+            ./img/oruri-jacome-mobile.jpg    1x,
+            ./img/oruri-jacome-mobile.jpg-2x 2x
+          "
+        />
+        <!-- width="200"
+            height="278" -->
+        <!-- width="460"
+            height="574" -->
+      </picture>
+      <p class="oruri-descript">
+        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+        Velit officia consequat duis enim velit mollit. Exercitation veniam
+        consequat sunt nostrud amet.
+      </p>
+    </div>
+    <div class="pexels-slider">
+      <ul class="slider-pic">
+        <li class="slider-item">
+          <picture>
+            <source
+              srcset="
+                ./img/helena-lopes-desktop.jpg    1x,
+                ./img/helena-lopes-desktop-2x.jpg 2x
+              "
+              media="(min-width: 1280px)"
+            />
+            <source
+              srcset="
+                ./img/helena-lopes-tablet.jpg    1x,
+                ./img/helena-lopes-tablet-2x.jpg 2x
+              "
+              media="(min-width: 1024px)"
+            />
+            <source
+              srcset="
+                ./img/helena-lopes-mobile.jpg    1x,
+                ./img/helena-lopes-mobile-2x.jpg 2x
+              "
+              media="(min-width: 320px)"
+            />
+  
+            <img
+            class="border-four"
+              src="./img/helena-lopes-mobile.jpg"
+              alt="helena-lopes"
+              srcset="
+                ./img/helena-lopes-mobile.jpg    1x,
+                ./img/helena-lopes-mobile.jpg-2x 2x
+              "
+            />
+          </picture>
+        </li>
+  
+        <li class="slider-item">
+          <picture>
+            <source
+              srcset="
+                ./img/mat-brown-desktop.jpg    1x,
+                ./img/mat-brown-desktop-2x.jpg 2x
+              "
+              media="(min-width: 1280px)"
+            />
+            <source
+              srcset="
+                ./img/mat-brown-tablet.jpg    1x,
+                ./img/mat-brown-tablet-2x.jpg 2x
+              "
+              media="(min-width: 1024px)"
+            />
+            <source
+              srcset="
+                ./img/mat-brown-mobile.jpg    1x,
+                ./img/mat-brown-mobile-2x.jpg 2x
+              "
+              media="(min-width: 320px)"
+            />
+  
+            <img
+            class="border-four"
+              src="./img/mat-brown-mobile.jpg"
+              alt="mat-brown"
+              srcset="
+                ./img/mat-brown-mobile.jpg    1x,
+                ./img/mat-brown-mobile.jpg-2x 2x
+              "
+            />
+          </picture>
+        </li>
+      </ul>
+  
+      <div class="slider-arrows">
+        <button type="button" class="slider-arrow-btn">
+          <svg class="icon-arrow" width="32" height="32">
+            <use href="./img/icons.svg#arrow-left"></use>
+          </svg>
+        </button>
+        <button type="button" class="slider-arrow-btn">
+          <svg class="icon-arrow" width="32" height="32">
+            <use href="./img/icons.svg#arrow-right"></use>
+          </svg>
+        </button>
+      </div>
     </div>
   </div>
 </section>
