--- a/src/partials/abouthotel.html
+++ b/src/partials/abouthotel.html
@@ -1,115 +1,182 @@
 <!-- --------About our hotel-------- -->
 <section class="about-hotel">
-    <div class="container">
-                <h2 class="visually-hidden">About our restaurant</h2>
-                <div class="about-hotel-paragraph">
-                    <p class="about-hotel-pre-title">Amet minim mollit non</p>
-                    <h3 class="about-hotel-title">MIMIHO</h3>
-                    <p class="about-hotel-after-title">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
-                        Velit officia consequat duis enim velit
-                        mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-                </div>
-        <div class="img-hotel">
-            <picture>
-                <source srcset="
-                                ./img/abouthotel/modern-studio-apartment-desc.jpg   1x,
-                                ./img/abouthotel/modern-studio-apartment-desc-2x.jpg 2x
-                              " media="(min-width: 1280px)" />
-                <source srcset="
-                                ./img/abouthotel/modern-studio-apartment-tab.jpg    1x,
-                                ./img/abouthotel/modern-studio-apartment-tab-2x.jpg 2x
-                              " media="(min-width: 1024px)" />
-                <source srcset="
-                                ./img/abouthotel/modern-studio-apartment-mob.jpg    1x,
-                                ./img/abouthotel/modern-studio-apartment-mob-2x.jpg 2x
-                              " media="(min-width: 320px)" />
-                <img class="border-hotel-one" src="./img/abouthotel/modern-studio-apartment-mob.jpg" alt="modern-studio">
-            </picture>
-
-        </div>
-        <div class="about-hotel-pexels">
-            <p class="about-hotel-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
-                officia
-                consequat duis enim velit
-                mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-            <picture>
-                <source srcset="
-                        ./img/abouthotel/hotel-desc.jpg    1x,
-                        ./img/abouthotel/hotel-desc-2x.jpg 2x
-                      " media="(min-width: 1280px)" />
-                <source srcset="
-                    ./img/abouthotel/hotel-tab.jpg    1x,
-                    ./img/abouthotel/hotel-tab-2x.jpg 2x
-                  " media="(min-width: 1024px)" />
-                <source srcset="
-                        ./img/abouthotel/hotel-mob.jpg    1x,
-                        ./img/abouthotel/hotel-mob-2x.jpg 2x
-                      " media="(min-width: 320px)" />
-
-                <img class="border-hotel-two" src="./img/abouthotel/hotel-mob.jpg" alt="hotel">
-            </picture>
-        </div>
-        <div class="about-hotel-img" >
-            <button type="button" class="arrowperv_abouthotel">
-                <svg class="about-icon-hotel" width="32" height="32">
-                    <use href="./img/icons.svg#arrow-left"></use>
-                </svg>
-            </button>
-            <div class="slider_2" dir="rtl">
-                <picture>
-                    <source srcset="
-                                                    ./img/aboutrest/about_rest_4_desc_1x.jpg    1x,
-                                                    ./img/aboutrest/about_rest_4_desc_2x.jpg 2x
-                                                  " media="(min-width: 1280px)" />
-                    <source srcset="
-                                                ./img/aboutrest/about_rest_4_tab_1x.jpg    1x,
-                                                ./img/aboutrest/about_rest_4_tab_2x.jpg 2x
-                                              " media="(min-width: 1024px)" />
-                    <source srcset="
-                                                    ./img/aboutrest/about_rest_4_mob_1x.jpg    1x,
-                                                    ./img/aboutrest/about_rest_4_mob_2x.jpg 2x
-                                                  " media="(min-width: 320px)" />
-    
-                    <img class="border-hotel-three" src="./img/aboutrest/about_rest_4_mob_1x.jpg" alt="white-towel-bed">
-                </picture>
-                <picture>
-                    <source srcset="
-                                                    ./img/aboutrest/about_rest_3_desc_1x.jpg    1x,
-                                                    ./img/aboutrest/about_rest_3_desc_2x.jpg 2x
-                                                  " media="(min-width: 1280px)" />
-                    <source srcset="
-                                                ./img/aboutrest/about_rest_3_tab_1x.jpg    1x,
-                                                ./img/aboutrest/about_rest_3_tab_2x.jpg 2x
-                                              " media="(min-width: 1024px)" />
-                    <source srcset="
-                                                    ./img/aboutrest/about_rest_3_mob_1x.jpg    1x,
-                                                    ./img/aboutrest/about_rest_3_mob_2x.jpg 2x
-                                                  " media="(min-width: 320px)" />
-                
-                    <img class="border-hotel-four" src="./img/aboutrest/about_rest_3_mob_1x.jpg" alt="hotel-registration">
-                </picture>
-                <picture>
-                    <source srcset="
-                                                                ./img/abouthotel/hotel-registration-desc.jpg    1x,
-                                                                ./img/abouthotel/hotel-registration-desc-2x.jpg 2x
-                                                              " media="(min-width: 1280px)" />
-                    <source srcset="
-                                                            ./img/abouthotel/hotel-registration-tab.jpg    1x,
-                                                            ./img/abouthotel/hotel-registration-tab-2x.jpg 2x
-                                                          " media="(min-width: 1024px)" />
-                    <source srcset="
-                                                                ./img/abouthotel/hotel-registration-mob.jpg    1x,
-                                                                ./img/abouthotel/hotel-registration-mob-2x.jpg 2x
-                                                              " media="(min-width: 320px)" />
-                
-                    <img class="border-hotel-four" src="./img/abouthotel/hotel-registration-mob.jpg" alt="hotel-registration">
-                </picture>
-            </div >
-            <button type="button" class="arrownext_abouthotel">
-                <svg class="about-icon-hotel" width="32" height="32">
-                    <use href="./img/icons.svg#arrow-right"></use>
-                </svg>
-            </button>
-        </div>
+  <div class="container">
+    <h2 class="visually-hidden">About our restaurant</h2>
+    <div class="about-hotel-paragraph">
+      <p class="about-hotel-pre-title">Amet minim mollit non</p>
+      <h3 class="about-hotel-title">MIMIHO</h3>
+      <p class="about-hotel-after-title">
+        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+        sint. Velit officia consequat duis enim velit mollit. Exercitation
+        veniam consequat sunt nostrud amet.
+      </p>
     </div>
+    <div class="img-hotel">
+      <picture>
+        <source
+          srcset="
+            ./img/abouthotel/modern-studio-apartment-desc.jpg    1x,
+            ./img/abouthotel/modern-studio-apartment-desc-2x.jpg 2x
+          "
+          media="(min-width: 1280px)"
+        />
+        <source
+          srcset="
+            ./img/abouthotel/modern-studio-apartment-tab.jpg    1x,
+            ./img/abouthotel/modern-studio-apartment-tab-2x.jpg 2x
+          "
+          media="(min-width: 1024px)"
+        />
+        <source
+          srcset="
+            ./img/abouthotel/modern-studio-apartment-mob.jpg    1x,
+            ./img/abouthotel/modern-studio-apartment-mob-2x.jpg 2x
+          "
+          media="(min-width: 320px)"
+        />
+        <img
+          class="border-hotel-one"
+          src="./img/abouthotel/modern-studio-apartment-mob.jpg"
+          alt="modern-studio"
+        />
+      </picture>
+    </div>
+    <div class="about-hotel-pexels">
+      <p class="about-hotel-text">
+        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+        sint. Velit officia consequat duis enim velit mollit. Exercitation
+        veniam consequat sunt nostrud amet.
+      </p>
+      <picture>
+        <source
+          srcset="
+            ./img/abouthotel/hotel-desc.jpg    1x,
+            ./img/abouthotel/hotel-desc-2x.jpg 2x
+          "
+          media="(min-width: 1280px)"
+        />
+        <source
+          srcset="
+            ./img/abouthotel/hotel-tab.jpg    1x,
+            ./img/abouthotel/hotel-tab-2x.jpg 2x
+          "
+          media="(min-width: 1024px)"
+        />
+        <source
+          srcset="
+            ./img/abouthotel/hotel-mob.jpg    1x,
+            ./img/abouthotel/hotel-mob-2x.jpg 2x
+          "
+          media="(min-width: 320px)"
+        />
+
+        <img
+          class="border-hotel-two"
+          src="./img/abouthotel/hotel-mob.jpg"
+          alt="hotel"
+        />
+      </picture>
+    </div>
+    <div class="about-hotel-img">
+      <button type="button" class="arrowperv_abouthotel">
+        <svg class="about-icon-hotel" width="32" height="32">
+          <use href="./img/icons.svg#arrow-left"></use>
+        </svg>
+      </button>
+      <div class="slider_2" dir="rtl">
+        <picture>
+          <source
+            srcset="
+              ./img/aboutrest/about_rest_4_desc_1x.jpg 1x,
+              ./img/aboutrest/about_rest_4_desc_2x.jpg 2x
+            "
+            media="(min-width: 1280px)"
+          />
+          <source
+            srcset="
+              ./img/aboutrest/about_rest_4_tab_1x.jpg 1x,
+              ./img/aboutrest/about_rest_4_tab_2x.jpg 2x
+            "
+            media="(min-width: 1024px)"
+          />
+          <source
+            srcset="
+              ./img/aboutrest/about_rest_4_mob_1x.jpg 1x,
+              ./img/aboutrest/about_rest_4_mob_2x.jpg 2x
+            "
+            media="(min-width: 320px)"
+          />
+
+          <img
+            class="border-hotel-three"
+            src="./img/aboutrest/about_rest_4_mob_1x.jpg"
+            alt="white-towel-bed"
+          />
+        </picture>
+        <picture>
+          <source
+            srcset="
+              ./img/aboutrest/about_rest_3_desc_1x.jpg 1x,
+              ./img/aboutrest/about_rest_3_desc_2x.jpg 2x
+            "
+            media="(min-width: 1280px)"
+          />
+          <source
+            srcset="
+              ./img/aboutrest/about_rest_3_tab_1x.jpg 1x,
+              ./img/aboutrest/about_rest_3_tab_2x.jpg 2x
+            "
+            media="(min-width: 1024px)"
+          />
+          <source
+            srcset="
+              ./img/aboutrest/about_rest_3_mob_1x.jpg 1x,
+              ./img/aboutrest/about_rest_3_mob_2x.jpg 2x
+            "
+            media="(min-width: 320px)"
+          />
+
+          <img
+            class="border-hotel-four"
+            src="./img/aboutrest/about_rest_3_mob_1x.jpg"
+            alt="hotel-registration"
+          />
+        </picture>
+        <picture>
+          <source
+            srcset="
+              ./img/abouthotel/hotel-registration-desc.jpg    1x,
+              ./img/abouthotel/hotel-registration-desc-2x.jpg 2x
+            "
+            media="(min-width: 1280px)"
+          />
+          <source
+            srcset="
+              ./img/abouthotel/hotel-registration-tab.jpg    1x,
+              ./img/abouthotel/hotel-registration-tab-2x.jpg 2x
+            "
+            media="(min-width: 1024px)"
+          />
+          <source
+            srcset="
+              ./img/abouthotel/hotel-registration-mob.jpg    1x,
+              ./img/abouthotel/hotel-registration-mob-2x.jpg 2x
+            "
+            media="(min-width: 320px)"
+          />
+
+          <img
+            class="border-hotel-four"
+            src="./img/abouthotel/hotel-registration-mob.jpg"
+            alt="hotel-registration"
+          />
+        </picture>
+      </div>
+      <button type="button" class="arrownext_abouthotel">
+        <svg class="about-icon-hotel" width="32" height="32">
+          <use href="./img/icons.svg#arrow-right"></use>
+        </svg>
+      </button>
+    </div>
+  </div>
 </section>
