--- a/src/partials/amenities.html
+++ b/src/partials/amenities.html
@@ -78,7 +78,7 @@
         <a class="amenities-link" href="./hotel.html"
           >Повернутися до перегляду номерів</a
         >
-        <svg class="amenities-icon" width="24" height="24">
+        <svg class="amenities-icon">
           <use href="./img/icons.svg#arrow-right"></use>
         </svg>
       </div>
