--- a/src/partials/hero4.html
+++ b/src/partials/hero4.html
@@ -3,12 +3,16 @@
 <section class="room-hero">
   <div class="container">
     <div class="room-hero-arrows">
-      <svg class="golden-arrows" width="40px" height="40px">
-        <use href="./img/icons.svg#arrow-left"></use>
-      </svg>
-      <svg class="golden-arrows" width="40px" height="40px">
-        <use href="./img/icons.svg#arrow-right"></use>
-      </svg>
+      <button type="button" class="room-button-arrow">
+        <svg class="golden-arrows" width="40px" height="40px">
+          <use href="./img/icons.svg#arrow-left"></use>
+        </svg>
+      </button>
+      <button type="button" class="room-button-arrow">
+        <svg class="golden-arrows" width="40px" height="40px">
+          <use href="./img/icons.svg#arrow-right"></use>
+        </svg>
+      </button>
     </div>
     <h2 class="room-hero-title">ДВОМІСНИЙ НОМЕР люкс</h2>
     <p class="room-hero-text">
