--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -63,7 +63,8 @@
   background: rgba(0, 0, 0, 0.4);
   border: 2px solid #ffffff;
   border-radius: 25px;
-  padding: 14px 24px;
+  padding-left: 24px;
+  padding-right: 24px;
   width: auto;
   height: 48px;
   transition: background-color var(--timing-function),
