--- a/src/partials/amenities.html
+++ b/src/partials/amenities.html
@@ -76,11 +76,11 @@
       </button>
       <div class="amenities-link-room">
         <a class="amenities-link" href="./hotel.html"
-          >Повернутися до перегляду номерів</a
-        >
-        <svg class="amenities-icon">
-          <use href="./img/icons.svg#arrow-right"></use>
-        </svg>
+          >Повернутися до перегляду номерів
+          <svg class="amenities-icon">
+            <use href="./img/icons.svg#arrow-right"></use>
+          </svg>
+        </a>
       </div>
     </div>
   </div>
